opam-version: "2.0"
version: "v0.17.1"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_optcomp"
bug-reports: "https://github.com/janestreet/ppx_optcomp/issues"
dev-repo: "git+https://github.com/janestreet/ppx_optcomp.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_optcomp/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"  {>= "5.1.0"}
  "base"   {>= "v0.17" & < "v0.18"}
  "stdio"  {>= "v0.17" & < "v0.18"}
  "dune"   {>= "3.11.0"}
  "ppxlib" {>= "0.36.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Optional compilation for OCaml"
description: "
Part of the Jane Street's PPX rewriters collection.
"
